Some width issues on iOs.

--- a/src/client/components/AddExpenseForm/AddExpenseForm.css
+++ b/src/client/components/AddExpenseForm/AddExpenseForm.css
@@ -2,6 +2,7 @@
 @value sansSerif from '../../helpers/fonts.css';
 
 .form {
+  box-sizing: border-box;
   margin-top: 30px;
   padding: 0 30px;
 }
