--- a/src/client/components/PageHeader/PageHeader.css
+++ b/src/client/components/PageHeader/PageHeader.css
@@ -2,6 +2,7 @@
 @value grayLighter, grayDarker, gray, yellow, purple from '../../helpers/colors.css';
 
 .wrapper {
+  box-sizing: border-box;
   display: flex;
   flex-direction: row;
   align-items: center;
